--- a/notebooks/scheduler-test.ipynb
+++ b/notebooks/scheduler-test.ipynb
@@ -296,7 +296,7 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -310,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
