--- a/notebooks/year-review-2022.ipynb
+++ b/notebooks/year-review-2022.ipynb
@@ -1607,16 +1607,46 @@
      "output_type": "stream",
      "text": [
       " * sqlite:///../data/stations.db\n",
-      "(sqlite3.OperationalError) near \"FROM\": syntax error\n",
-      "[SQL: -- Number of stations by motion axes\n",
-      "SELECT\n",
-      "    rotator,\n",
-      "    count(rotator) as num,\n",
-      "FROM stations\n",
-      "GROUP BY rotator\n",
-      "ORDER BY rotator;]\n",
-      "(Background on this error at: https://sqlalche.me/e/14/e3q8)\n"
+      "Done.\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>rotator</th>\n",
+       "            <th>num</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>0</td>\n",
+       "            <td>1747</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>1</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>2</td>\n",
+       "            <td>656</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td></td>\n",
+       "            <td>199</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(0, 1747), (1, 2), (2, 656), ('', 199)]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1624,7 +1654,7 @@
     "-- Number of stations by motion axes\n",
     "SELECT\n",
     "    rotator,\n",
-    "    count(rotator) as num,\n",
+    "    count(rotator) as num\n",
     "FROM stations\n",
     "GROUP BY rotator\n",
     "ORDER BY rotator;"
@@ -1641,9 +1671,9 @@
      "output_type": "stream",
      "text": [
       "axes   N   %\n",
-      "  0   358 37.1\n",
-      "  1   316 32.8\n",
-      "  2   290 30.1\n"
+      "  0  1747 72.6\n",
+      "  1     2  0.1\n",
+      "  2   656 27.3\n"
      ]
     }
    ],
