--- a/notebooks/year-review-2022.ipynb
+++ b/notebooks/year-review-2022.ipynb
@@ -7,21 +7,23 @@
    "source": [
     "# Year in Review &ndash; 2022  <a class=\"tocSkip\">\n",
     "\n",
-    "Interesting stats about ground stations, satellites, and observations on the [SatNOGS Network](https://network.satnogs.org)."
+    "Dan White < dan.white at libre.space >\n",
+    "\n",
+    "Interesting stats about ground stations, satellites, and observations on the [SatNOGS Network](https://network.satnogs.org).\n",
+    "\n",
+    "Source notebook at [github/wiredlab/scheduling-bazaar/notebooks](https://github.com/wiredlab/scheduling-bazaar/blob/master/notebooks/year-review-2022.ipynb)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4b9d0126",
-   "metadata": {},
+   "id": "36904eff-c8f9-4c97-bc41-56fbde7f7cd3",
+   "metadata": {
+    "tags": [],
+    "toc": 1
+   },
    "source": [
-    "## Navigation\n",
-    "\n",
-    "\n",
-    "* 2. [Ground Stations database setup](#Ground-Stations-database-setup)\n",
-    "* 3. [Ground Stations Statistics](#Ground-Stations-Statistics)\n",
-    "* 4. [Observations database setup](#Observations-database-setup)\n",
-    "* 5. [Observations Statistics](#Observations-Statistics)"
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Ground-Stations-database-setup\" data-toc-modified-id=\"Ground-Stations-database-setup-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Ground Stations database setup</a></span><ul class=\"toc-item\"><li><span><a href=\"#Rotator-information\" data-toc-modified-id=\"Rotator-information-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Rotator information</a></span></li></ul></li><li><span><a href=\"#Ground-Stations-Statistics\" data-toc-modified-id=\"Ground-Stations-Statistics-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Ground Stations Statistics</a></span><ul class=\"toc-item\"><li><span><a href=\"#Popular-antenna-types\" data-toc-modified-id=\"Popular-antenna-types-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Popular antenna types</a></span></li><li><span><a href=\"#Number-of-rotation-axes\" data-toc-modified-id=\"Number-of-rotation-axes-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Number of rotation axes</a></span></li><li><span><a href=\"#Online-status\" data-toc-modified-id=\"Online-status-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>Online status</a></span></li><li><span><a href=\"#Ground-stations-created-by-year\" data-toc-modified-id=\"Ground-stations-created-by-year-2.4\"><span class=\"toc-item-num\">2.4&nbsp;&nbsp;</span>Ground stations created by year</a></span></li></ul></li><li><span><a href=\"#Observations-database-setup\" data-toc-modified-id=\"Observations-database-setup-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Observations database setup</a></span></li><li><span><a href=\"#Observations-Statistics\" data-toc-modified-id=\"Observations-Statistics-4\"><span class=\"toc-item-num\">4&nbsp;&nbsp;</span>Observations Statistics</a></span><ul class=\"toc-item\"><li><span><a href=\"#Most-active-Observers\" data-toc-modified-id=\"Most-active-Observers-4.1\"><span class=\"toc-item-num\">4.1&nbsp;&nbsp;</span>Most active Observers</a></span></li><li><span><a href=\"#High-utilization-and-large-averages\" data-toc-modified-id=\"High-utilization-and-large-averages-4.2\"><span class=\"toc-item-num\">4.2&nbsp;&nbsp;</span>High utilization and large averages</a></span></li><li><span><a href=\"#Popular-ground-stations\" data-toc-modified-id=\"Popular-ground-stations-4.3\"><span class=\"toc-item-num\">4.3&nbsp;&nbsp;</span>Popular ground stations</a></span></li><li><span><a href=\"#Observer-diversity\" data-toc-modified-id=\"Observer-diversity-4.4\"><span class=\"toc-item-num\">4.4&nbsp;&nbsp;</span>Observer diversity</a></span></li><li><span><a href=\"#Popular-satellites-this-year\" data-toc-modified-id=\"Popular-satellites-this-year-4.5\"><span class=\"toc-item-num\">4.5&nbsp;&nbsp;</span>Popular satellites this year</a></span></li><li><span><a href=\"#Observers-with-satellite-fever\" data-toc-modified-id=\"Observers-with-satellite-fever-4.6\"><span class=\"toc-item-num\">4.6&nbsp;&nbsp;</span>Observers with satellite fever</a></span></li><li><span><a href=\"#Stations-watching-all-the-sats\" data-toc-modified-id=\"Stations-watching-all-the-sats-4.7\"><span class=\"toc-item-num\">4.7&nbsp;&nbsp;</span>Stations watching all-the-sats</a></span></li></ul></li><li><span><a href=\"#More-stats\" data-toc-modified-id=\"More-stats-5\"><span class=\"toc-item-num\">5&nbsp;&nbsp;</span>More stats</a></span><ul class=\"toc-item\"><li><span><a href=\"#Your-turn!\" data-toc-modified-id=\"Your-turn!-5.1\"><span class=\"toc-item-num\">5.1&nbsp;&nbsp;</span>Your turn!</a></span></li><li><span><a href=\"#Housekeeping\" data-toc-modified-id=\"Housekeeping-5.2\"><span class=\"toc-item-num\">5.2&nbsp;&nbsp;</span>Housekeeping</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -3871,7 +3873,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "847\n"
+      "847\r\n"
      ]
     }
    ],
@@ -4556,6 +4558,11 @@
   }
  ],
  "metadata": {
+  "authors": [
+   {
+    "name": "Dan White"
+   }
+  ],
   "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
@@ -4574,6 +4581,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.8"
   },
+  "title": "SatNOGS year-in-review 2022",
   "toc": {
    "base_numbering": 1,
    "nav_menu": {
@@ -4581,19 +4589,19 @@
     "width": "283px"
    },
    "number_sections": true,
-   "sideBar": true,
+   "sideBar": false,
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
-   "toc_cell": false,
+   "toc_cell": true,
    "toc_position": {
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "282px"
+    "width": "329px"
    },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "toc-autonumbering": true,
   "toc-showcode": false,
