--- a/notebooks/azel-frames-histograms.ipynb
+++ b/notebooks/azel-frames-histograms.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "f93c089e-2294-43f0-a18f-829d6754bfa3",
    "metadata": {
     "tags": []
@@ -29,21 +29,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "eb9c0783-7200-41b9-8410-02f0e13b5bb2",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "conn = sqlite3.connect(\"../data/observations.db\")\n",
+    "conn = sqlite3.connect(\"file:../data/observations.db?mode=ro\", uri=True)\n",
     "conn.execute(\"\"\"ATTACH DATABASE '../data/demoddata.db' AS data;\"\"\")\n",
     "conn.row_factory = sqlite3.Row"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "cdfdea99-b6b2-454c-b6e9-dfc7ee6de139",
    "metadata": {
     "tags": []
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "17eb7eb8-d15f-43c0-96d9-62527d473989",
    "metadata": {
     "tags": []
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "9de0a21a-b5a5-4869-8d13-62f1c1cba5ce",
    "metadata": {
     "tags": []
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "e0246a3a-34c2-4c0b-bab4-0e8c1c382a60",
    "metadata": {
     "tags": []
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "01e7b4e6-3c14-4bc5-ad77-0bd86eb5f784",
    "metadata": {
     "tags": []
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "8c2c27d0-22c2-4eed-b853-de35424f1b6b",
    "metadata": {
     "tags": []
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "id": "5661ec56-528a-4402-bdbc-a906cce7635b",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "id": "4cc6dc8d-333f-42cd-b80a-55cd20bcab08",
    "metadata": {},
    "outputs": [
@@ -349,46 +349,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "id": "053218e1-a3ab-4194-87d0-5ab4d8997f5f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "(5, 230.73324235951796, 603722)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.min(data_lens)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "39a7514a-439e-4c51-b0aa-e38143cf0d27",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "603722"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.max(data_lens)"
+    "np.min(data_lens), np.mean(data_lens), np.max(data_lens)"
    ]
   },
   {
